[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/NavigationMapTool/Tool.gd" type="Script" id=1]

[node name="Tool" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NavigationMapTool" type="CheckBox" parent="."]
visible = false
margin_right = 160.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
text = "NavigationMapTool"

[node name="tools" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Save" type="Button" parent="tools"]
margin_left = 176.0
margin_right = 246.0
margin_bottom = 30.0
text = "SaveData"

[node name="NoDataDialog" type="AcceptDialog" parent="."]
visible = true
margin_right = 94.0
margin_bottom = 58.0
dialog_text = "El actual NavigationMap no tiene ningun archivo de datos asociado, cree o seleccione uno nuevo con la extension \".tres\"."

[node name="NoFileFound" type="AcceptDialog" parent="."]
visible = true
margin_right = 94.0
margin_bottom = 58.0
dialog_text = "No se encuentra el archivo data."

[node name="FailLoad" type="AcceptDialog" parent="."]
visible = true
margin_right = 94.0
margin_bottom = 58.0
dialog_text = "Se produjo un error al Cargar los datos."

[node name="FailSave" type="AcceptDialog" parent="."]
visible = true
margin_right = 94.0
margin_bottom = 58.0
dialog_text = "Se produjo un error al Guardar los datos."

